tmp/funnel-output_path-X4WVyo9r.tmp/gyak09/tests/unit/pods/errors/edit/route-test.jshint.js
/home/ubuntu/workspace/tmp/jshinter-output_path-kvb3rGL3.tmp/unit/pods/errors/edit/route-test.jshint.js